Fix hover anchor alignment

--- a/doc/_resources/assets/docsite.css
+++ b/doc/_resources/assets/docsite.css
@@ -519,11 +519,15 @@ body > #page > main > #content {
   opacity: 1;
 }
 .markdown-body .anchor {
+  height: 100%;
   position: relative;
   opacity: 0;
 }
 .markdown-body .anchor::before {
   content: "#";
+  height: 100%;
+  display: flex;
+  align-items: center;
   position: absolute;
   padding-left: 10px;
   padding-right: 5px;
